# arechgieb9a65f0f-6e0f-42a7-9bc4-56e5f75dc56b

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: compressData_service.py  createBackup_service.py  createUser_service.py  createWebData_service.py  deleteBackup_service.py  deleteUser_service.py  deleteWebData_service.py  fetchCrawledData_service.py  fetchSearchMetadata_service.py  getAllWebData_service.py  getBackupDetails_service.py  getCompressionSettings_service.py  getCrawlingStatus_service.py  getUserDetails_service.py  getWebData_service.py  listBackups_service.py  listCompressedFiles_service.py  listUsers_service.py  logSearchQuery_service.py  restoreData_service.py  searchArchivedContent_service.py  server.py  startCrawling_service.py  stopCrawling_service.py  updateCompressionSettings_service.py  updateCrawlingConfig_service.py  updateUser_service.py  updateWebData_service.py
